chore: further input styling to match prod

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -38,6 +38,10 @@ h5 {
     .v-application--wrap {
         min-height: unset;
     }
+
+    ul, ol {
+        padding-left: 24px;
+    }
 }
 
 //--------------------------
