--- a/solution/ui/regulations/css/scss/partials/_search.scss
+++ b/solution/ui/regulations/css/scss/partials/_search.scss
@@ -10,7 +10,20 @@
 }
 
 .search-field {
-    background-color: #FFF;
+    background-color: #fff;
+
+    .v-field__input {
+        padding-left: 12px;
+
+        &::placeholder {
+            letter-spacing: normal;
+            position: absolute;
+            top: calc(50% + 1px);
+            transform: translateY(-50%);
+            opacity: 1;
+            color: #0009;
+        }
+    }
 
     .v-field__append-inner i,
     .v-field__clearable i {
@@ -18,9 +31,46 @@
         color: $mid_blue;
     }
 
+    .v-field__append-inner i {
+        &:focus-within {
+            outline: none;
+        }
+
+        &:focus::after {
+            opacity: 0.12;
+        }
+
+        &::after {
+            background-color: currentColor;
+            border-radius: 50%;
+            content: "";
+            display: inline-block;
+            height: 100%;
+            left: 0;
+            opacity: 0;
+            pointer-events: none;
+            position: absolute;
+            top: 0;
+            transform: scale(1.3);
+            width: 100%;
+            transition: opacity 0.2s cubic-bezier(0.4, 0, 0.6, 1);
+        }
+    }
+
     .v-field__clearable i {
         padding-right: 2px;
         border-right: 1px solid $light_gray;
+    }
+
+    .v-field__outline > * {
+        opacity: 1;
+        border-color: $light_gray;
+    }
+
+    .v-field--focused {
+        .v-field__outline > * {
+            border-color: $mid_blue;
+        }
     }
 
     //fieldset {
