--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -39,7 +39,8 @@ h5 {
         min-height: unset;
     }
 
-    ul, ol {
+    ul,
+    ol {
         padding-left: 24px;
     }
 }
@@ -506,12 +507,13 @@ $header_height_mobile: 120px;
 
 $view_compare_height: 54px;
 
-a {
+a,
+.v-application a {
     color: $primary_link_color;
 
     &:focus,
     &:hover {
-        color: $primary_link_hover;
+        color: $primary_link_color;
         cursor: pointer;
         @include transition;
     }
