fix: tweak login indicator style

--- a/solution/ui/regulations/css/scss/_layout.scss
+++ b/solution/ui/regulations/css/scss/_layout.scss
@@ -163,6 +163,10 @@ footer {
     -webkit-box-shadow: -3px 3px 10px 0px rgba(0, 0, 0, 0.08);
     -moz-box-shadow: -3px 3px 10px 0px rgba(0, 0, 0, 0.08);
 
+    .span__login-greeting {
+        margin-right: 0.25rem;
+    }
+
     .span__login-lamp {
         display: inline-block;
         width: 10px;
