fix: View Past Versions button label spacing

--- a/solution/ui/regulations/css/scss/partials/_sidebar_right.scss
+++ b/solution/ui/regulations/css/scss/partials/_sidebar_right.scss
@@ -68,7 +68,7 @@ aside.right-sidebar {
 
         .button-inner-container {
             display: inline-block;
-            padding-left: $spacer-1;
+            padding-left: 0.75rem;
             vertical-align: middle;
             font-weight: 600;
             line-height: 1.4;
