fix: move styles from RecentChangesContainer SFC to SCSS file

--- a/solution/ui/regulations/css/scss/partials/_site_homepage.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage.scss
@@ -432,6 +432,14 @@
                 .resources__container {
                     flex: 2;
 
+                    .rules-container {
+                        margin: 12px 0;
+
+                        .related-rule-list {
+                            margin-top: 20px;
+                            margin-bottom: 40px;
+                        }
+                    }
                     .v-tabs {
                         .v-slide-group__container {
                             .v-tab {
