EREGCSC-1765 -- Vue 3 Upgrade (#1218)
* chore: first step to upgrading -- no failures on vite builds

* chore: get eregs-vite SPA pages loading, if broken

* chore: version bumps

* chore: ignore vuetify in django templates and clickaway for now

* fix: vue specific syntax errors that blocked build

* chore: upgrade CDN versions of Vue

* basic Django template component/JS working

* chore: move json_script data outside of vue containers

* chore: move cdn/js scripts outside of Vue mount

* feat: identify custom elements

* chore: remove unused lifecycle methods

* chore: properly return validator bool; formatting

* refactor: upgrade clickaway directive to Vue3 syntax

* chore: re-add clickaway to (vestigial?) dropdown component

* chore: add optional rollup dependency to fix build-and-deploy-vue

* chore: add optional rollup dependency to eregs-vite to fix build-and-deploy-vue

* chore: fix warnings

* chore: revert RelatedRulesList reformatting

* refactor: filters become methods

* fix: wrap named slot content in named template elem

* chore: vuetify loads in django templates

* chore: hook up basic v-tab homepage func

* chore: make vuetify setup consistent between vite projects

* chore:  tweak vuetify plugin/config

* chore: continue to get vuetify to where it needs to be

* chore: continue to get Vuetify to where it needs to be

* chore: better name style blocks in django templates

* chore: get tooltip named slots working

* chore: return to separate vuetify plugins for each Vue project

* chore: remove test artifact

* feat: tweak tab slider style etc on homepage

* feat: add tabindex to v-tabs

* chore: remove light theme

* feat: tighten up homepage tab styles

* feat: homepage nav toggle button styles

* feat: first pass at v-text-input upgrade

* chore: further input styling to match prod

* chore: add vuetify overrides

* fix: add key to template

* fix: tweak login indicato

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -4,13 +4,6 @@
 
 {% block title_prefix %}{% endblock %}
 
-{% block spa_styles %}
-<link
-    href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
-    rel="stylesheet"
-/>
-{% endblock %}
-
 {% block body_class %}site-homepage--update{% endblock %}
 
 {% block pre_header %}
@@ -25,11 +18,12 @@
 <main>
     <nav id="placeholderNav"></nav>
     <left-nav-collapse contents-description="table of contents">
-        <toc-container
-            slot="nav-contents"
-            api-url="{{ API_BASE }}"
-            home-url="{% url 'homepage' %}"
-        ></toc-container>
+        <template #nav-contents>
+            <toc-container
+                api-url="{{ API_BASE }}"
+                home-url="{% url 'homepage' %}"
+            ></toc-container>
+        </template>
     </left-nav-collapse>
     <div id="main-content">
         <div class="top-container">
@@ -67,7 +61,7 @@
                     <div class="resources__container">
                         <recent-resources
                             api-url={{ API_BASE }}
-                        />
+                        >
                     </div>
                     <div class="policy-materials__container">
                         <div class="policy-materials">
