fix: mobile homepage menu button placement

--- a/solution/ui/regulations/css/scss/partials/_site_homepage.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage.scss
@@ -146,6 +146,8 @@
 
                 @media (max-width: $eds-xs-max) {
                     position: absolute;
+                    height: unset;
+                    width: unset;
                     top: unset;
                     right: unset;
                     left: 0;
